# Q1_acc_pankaj

./: .gitmodules  README.md
accel-pinocchio-escrow/: Cargo.toml  README.md
accel-pinocchio-escrow/src/: lib.rs
accel-pinocchio-escrow/src/instructions/: make.rs  make_v2.rs  mod.rs  refund.rs  refund_v2.rs  take.rs  take_v2.rs
accel-pinocchio-escrow/src/state/: escrow.rs  escrow_v2.rs  mod.rs
accel-pinocchio-escrow/src/tests/: benchmark.rs  mod.rs
escrow-litesvm-tuktuk/: Anchor.toml
escrow-litesvm-tuktuk/programs/anchor-escrow/: Cargo.toml
escrow-litesvm-tuktuk/programs/anchor-escrow/src/: lib.rs
escrow-litesvm-tuktuk/programs/anchor-escrow/src/instructions/: make.rs  mod.rs  refund.rs  schedule.rs
escrow-litesvm-tuktuk/programs/anchor-escrow/src/tests/: mod.rs  schedule_test_snippet.rs
escrow-litesvm-tuktuk/tests/: schedule-refund.ts
escrow-litesvm/programs/anchor-escrow/src/instructions/: make.rs  take.rs
escrow-litesvm/programs/anchor-escrow/src/state/: escrow.rs
escrow-litesvm/programs/anchor-escrow/src/tests/: mod.rs
fundraiser/anchor-fundraiser/: .gitignore
fundraiser/pinocchio-fundraiser-program/: Cargo.toml  README.md
fundraiser/pinocchio-fundraiser-program/src/: error.rs  lib.rs  raw_cpi.rs
fundraiser/pinocchio-fundraiser-program/src/instructions/: check_contributions.rs  contribute.rs  create_contributor.rs  initialize.rs  mod.rs  refund.rs
fundraiser/pinocchio-fundraiser-program/src/state/: contributor.rs  fundraiser.rs
fundraiser/pinocchio-fundraiser-program/src/tests/: mod.rs
gpt-tuktuk/: Anchor.toml  README.md  gpt-oracle.json  package.json
gpt-tuktuk/programs/gpt-tuktuk/: Cargo.toml
gpt-tuktuk/programs/gpt-tuktuk/src/: lib.rs  state.rs
gpt-tuktuk/programs/gpt-tuktuk/src/instructions/: consume_result.rs  execute_request.rs  initialize.rs  mod.rs  schedule_request.rs
gpt-tuktuk/scripts/: create-context.ts  setup-devnet.ts
gpt-tuktuk/tests/: gpt-tuktuk.ts
magicblock-er-example/: Anchor.toml
magicblock-er-example/programs/er-state-account/: Cargo.toml
magicblock-er-example/programs/er-state-account/src/: lib.rs
magicblock-er-example/programs/er-state-account/src/instructions/: consume_randomness.rs  mod.rs  request_randomness.rs
magicblock-er-example/tests/: er-state-account.ts
nft/nft-staking-core-example/: .gitignore  Anchor.toml  Cargo.toml  package.json  run-test.sh
nft/nft-staking-core-example/.anchor/test-ledger/: faucet-keypair.json  genesis.tar.bz2  stake-account-keypair.json  test-ledger-log.txt  validator-keypair.json  vote-account-keypair.json
nft/nft-staking-core-example/.anchor/test-ledger/rocksdb/: 000014.sst  000015.sst  000016.sst  000017.sst  000018.sst  000019.sst  IDENTITY  LOG  LOG.old.1772491836275386  MANIFEST-000021
nft/nft-staking-core-example/programs/nft-staking-core/: Cargo.toml
nft/nft-staking-core-example/programs/nft-staking-core/src/: lib.rs
nft/nft-staking-core-example/programs/nft-staking-core/src/instructions/: burn_staked_nft.rs  claim_rewards.rs  create_collection.rs  mod.rs  stake.rs  unstake.rs
nft/nft-staking-core-example/tests/: nft-staking-core.ts
transfer-hook-vault/: Anchor.toml
transfer-hook-vault/programs/transfer-hook-vault/: Cargo.toml
transfer-hook-vault/programs/transfer-hook-vault/src/: lib.rs
transfer-hook-vault/programs/transfer-hook-vault/src/instructions/: deposit.rs  init_extra_account_meta.rs  init_vault.rs  mod.rs  transfer_hook.rs  whitelist_operations.rs  withdraw.rs
transfer-hook-vault/programs/transfer-hook-vault/src/state/: mod.rs  vault_config.rs
transfer-hook-vault/programs/transfer-hook-vault/src/tests/: mod.rs
transfer-hook-vault/tests/: transfer-hook-vault.ts
week-3/generic_storage_challenge/: Cargo.toml
week-3/generic_storage_challenge/benches/: serialization_benchmark.rs
week-3/generic_storage_challenge/src/: borsh_serializer.rs  error.rs  json_serializer.rs  lib.rs  main.rs  wincode_serializer.rs
week-3/generic_storage_challenge/tests/: integration_tests.rs
week-3/todo_queue_app/: Cargo.toml
week-3/todo_queue_app/src/: lib.rs  main.rs
whitelist-transfer-hook/: .gitignore  README.md  assignment.md  package.json
whitelist-transfer-hook/programs/whitelist-transfer-hook/src/: lib.rs
whitelist-transfer-hook/tests/: whitelist-transfer-hook.ts
(+6 files in other folders)
