[package]
name = "generic_storage_challenge"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = { version = "1.5", features = ["derive"] }
wincode = { version = "0.4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "serialization_benchmark"
harness = false
