[package]
name = "nft-staking-core"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_staking_core"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
mpl-core = { version = "0.11.1", features = ["anchor"] }

# Explicit version pins to avoid edition 2024 dependencies
# since `cargo-build-sbf` is based on Rust 1.84 and cannot parse them.
# This ensures that even if `Cargo.lock` is deleted, it builds successfully.
blake3 = "=1.5.5"
rmp = "=0.8.14"
rmp-serde = "=1.3.0"



[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
